# bayesian-risk-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
artifacts/: report_metrics.json
docs/: index.html
scripts/: build_report.py
src/bayesian_risk_engine/: __init__.py  calibration.py  model.py
tests/: test_calibration.py  test_model.py
